--- a/bookmark/templates/bookmark/bookmark_confirm_delete.html
+++ b/bookmark/templates/bookmark/bookmark_confirm_delete.html
@@ -8,6 +8,7 @@
             <br>
             <div>진짜 지울래? {{bookmark}}</div>
             <button type="submit">sure</button>
+            <button onclick = history.back()>cancel</button>
         </form>
     </body>
 </html>
