--- a/bookmark/templates/bookmark/bookmark_update.html
+++ b/bookmark/templates/bookmark/bookmark_update.html
@@ -8,6 +8,7 @@
             {{ form.as_ul}}
             <!-- form.as_p = p태그를 사용해 views의 field 안에 항목으로 input 만들어줌. -->
             <button type=submit>modify</button>
+            <button onclick = history.back()>cancel</button>
         </form>
     </body>
 </html>
