--- a/bookmark/templates/bookmark/bookmark_create.html
+++ b/bookmark/templates/bookmark/bookmark_create.html
@@ -8,6 +8,7 @@
             {{ form.as_p}}
             <!-- form.as_p = p태그를 사용해 views의 field 안에 항목으로 input 만들어줌. -->
             <input type =submit value="add bookmark">
+            <button onclick = history.back()>cancel</button>
         </form>
     </body>
 </html>
