--- a/bookmark/templates/bookmark/bookmark_create.html
+++ b/bookmark/templates/bookmark/bookmark_create.html
@@ -1,8 +1,6 @@
-<html>
-    <head>
-        <title>bookmark add</title>
-    </head>
-    <body>
+{% extends 'base.html' %}
+    {% block title %}ADD{% endblock %}
+    {% block content %}
         <form method = post>
             {% csrf_token %}
             {{ form.as_p}}
@@ -10,5 +8,4 @@
             <input type =submit value="add bookmark">
             <button onclick = history.back()>cancel</button>
         </form>
-    </body>
-</html>
+    {% endblock %}
