--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -1,9 +1,6 @@
-<html>
-    <head>
-        <title>Bookmark Detail</title>
-    </head>
-    <body>
+{% extends 'base.html' %}
+    {% block title %}DETAIL{% endblock %}
+    {% block content %}
         {{bookmark.site_name}}<br>
         {{bookmark.url}}
-    </body>
-</html>
+    {% endblock %}
