--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -1,8 +1,6 @@
-<html>
-<head>
-    <title>Bookmark List</title>
-</head>
-<body>
+{% extends 'base.html' %}
+    {% block title %}LIST{% endblock %}
+    {% block content %}
     <a href="{% url 'bookmark:add'%}">Add Bookmark</a>
     <p></p>
     <table>
@@ -27,5 +25,4 @@
             {% endfor %}
         </tbody>
     </table>
-</body>
-</html>
+{% endblock %}
