--- a/bookmark/templates/bookmark/bookmark_confirm_delete.html
+++ b/bookmark/templates/bookmark/bookmark_confirm_delete.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+
     {% block title %}CONFIRM{% endblock %}
     {% block content %}
         <form action="" method = "POST" name = f1>
@@ -6,6 +7,6 @@
             <br>
             <div>진짜 지울래? {{bookmark}}</div>
         </form>
-        <button onclick = "javascript:f1.submit();">sure</button>
-        <button onclick = history.back()>cancel</button>
+        <button type=submit class = "btn btn-danger btn-sm">sure</button>
+        <button onclick = history.back() class = "btn btn-info btn-sm">cancel</button>
     {% endblock %}
